second commit, no major changes
Second commit, no major changes

--- a/index.jade
+++ b/index.jade
@@ -5,6 +5,5 @@ block title
   title Welcome
 
 block content
-  :markdown
-    #Welcome
-    This is my website that I built with *jade*, *coffee-script*, and *sass*.
+  #Welcome To My Website
+  This is my website that I built with *jade*, *coffee-script*, and *sass*.
