Revert "second commit, no major changes"
This reverts commit 36275e0ff4469872c8e4834a1fd7c46d354ac89b.

--- a/index.jade
+++ b/index.jade
@@ -5,5 +5,6 @@ block title
   title Welcome
 
 block content
-  #Welcome To My Website
-  This is my website that I built with *jade*, *coffee-script*, and *sass*.
+  :markdown
+    #Welcome
+    This is my website that I built with *jade*, *coffee-script*, and *sass*.
